c/examples/writing-a-c-compiler-tests/tests/chapter_7/valid/assign_to_self.c
#ifdef SUPPRESS_WARNINGS
#pragma GCC diagnostic ignored "-Wunused-variable"
#endif
int main(void) {
    int a = 3;
    {
        int a = a = 4;
        return a;
    }
}