c/examples/writing-a-c-compiler-tests/tests/chapter_7/invalid_parse/missing_semicolon.c
int main(void) {
    int a = 4;
    {
        a = 5;
        return a
    }
}